# cppreflect

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.rst  build.bat  peopleInfo.xml  set-env-vars.sh  test_cppreflect.cpp
cppreflect/: cppreflect.cpp  cppreflect.h  enumreflect.h  macrohelpers.h  typetraits.cpp  typetraits.h
pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
